# AutoConsult

./: README.md  config.py  gpt.py  gradio_utils.py  main.py  pyproject.toml  record.py  transcriber.py
call_to_text/: record.py  transcriber.py
data/call_data/records/user1/131223-202906/: araba_satin_alma_ornek_diyalog.txt
data/call_data/records/user1/131223-204000/: araba_kiralama_ornek_diyalog.txt
data/graph_data/: cyphers.txt
data/graph_data/customers/: Customers_1.txt  Customers_2.txt  Customers_3.txt  Customers_4.txt
data/graph_data/dealers/: Dealer_1.txt  Dealer_2.txt  Dealer_3.txt  Dealer_4.txt
gpt/: graph.py  sales_asistant.py  summary_of_history.py
gradio_functions/: audio_record.py  sales_asistant.py  summary_of_history.py
graph/: cyper.py  ingestion.py
prompts/: cyper.py  sales_asistant.py  summary_of_history.py
